fix alignment

--- a/bake-a-pi-web/src/App.css
+++ b/bake-a-pi-web/src/App.css
@@ -39,7 +39,7 @@
   border-style: solid;
   border-radius: 10px;
   padding: 10px;
-  width: 500px;
+  width: 550px;
 }
 
 .App-link {
